--- a/_data/tag/bugzilla.yml
+++ b/_data/tag/bugzilla.yml
@@ -1,3 +1,6 @@
 - name:  How should I share example data with the email list or developers?
   link:  /faq/how_should_i_send_example_data_to_the_developers
 
+- name:  How should I share example data with the email list or developers?
+  link:  /faq/how_should_i_send_example_data_to_the_developers
+
