--- a/_data/tag/download.yml
+++ b/_data/tag/download.yml
@@ -1,3 +1,6 @@
+- name:  Which version of FieldTrip should I download from the ftp server?
+  link:  /faq/which_version_of_fieldtrip_should_i_download_from_the_ftp_server
+
 - name:  Download the FieldTrip toolbox
   link:  /download
 
