--- a/_data/tag/chile2020.yml
+++ b/_data/tag/chile2020.yml
@@ -1,6 +1,12 @@
 - name:  FieldTrip workshop at Universidad Católica del Maule, Chile
   link:  /workshop/chile2020
 
+- name:  FieldTrip workshop at Universidad Católica del Maule, Chile
+  link:  /workshop/chile2020
+
+- name:  Practical MEEG workshop at ICM in Paris
+  link:  /workshop/paris2019
+
 - name:  Practical MEEG workshop at ICM in Paris
   link:  /workshop/paris2019
 
