--- a/_data/tag/compile.yml
+++ b/_data/tag/compile.yml
@@ -1,6 +1,12 @@
 - name:  How can I compile the mex files and command-line executable?
   link:  /faq/compile
 
+- name:  How can I compile the mex files and command-line executable?
+  link:  /faq/compile
+
+- name:  Can I use FieldTrip without MATLAB license?
+  link:  /faq/compiled
+
 - name:  Can I use FieldTrip without MATLAB license?
   link:  /faq/compiled
 
