--- a/_data/tag/eeg-audodd.yml
+++ b/_data/tag/eeg-audodd.yml
@@ -1,3 +1,6 @@
+- name:  Time-frequency analysis of EEG data
+  link:  /workshop/oslo2019/timefrequency
+
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
