--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -1,92 +1,104 @@
-- name:  MEG dataformats
-  link:  /dataformat/meg
-
-- name:  Combined EEG and MEG source reconstruction
-  link:  /example/combined_eeg_and_meg_source_reconstruction
-
-- name:  Common filters in beamforming
-  link:  /example/common_filters_in_beamforming
-
-- name:  Compute forward simulated data and apply a beamformer scan
-  link:  /example/compute_forward_simulated_data_and_apply_a_beamformer_scan
-
-- name:  Create MNI-aligned grids in individual head-space
-  link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
-
-- name:  Fit a dipole to the tactile ERF after mechanical stimulation
-  link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
-
-- name:  Fixing a missing channel
-  link:  /example/fixing_a_missing_sensor
-
-- name:  Getting started with reading raw EEG or MEG data
-  link:  /example/getting_started_with_reading_raw_eeg_or_meg_data
-
-- name:  How to incorporate head movements in MEG analysis
-  link:  /example/how_to_incorporate_head_movements_in_meg_analysis
-
-- name:  Make leadfields using different headmodels
-  link:  /example/make_leadfields_using_different_headmodels
-
-- name:  Interpolating data from the CTF151 to the CTF275 sensor array using megrealign
-  link:  /example/megrealign
-
-- name:  Source statistics
-  link:  /example/source_statistics
-
-- name:  Can I create an artificial CTF dataset using MATLAB?
-  link:  /example/writing_simulated_data_to_a_ctf_dataset
-
 - name:  Can I do combined EEG and MEG source reconstruction?
   link:  /faq/can_i_do_combined_eeg_and_meg_source_reconstruction
+
+- name:  MEG dataformats
+  link:  /dataformat/meg
 
 - name:  How are electrodes, magnetometers or gradiometers described?
   link:  /faq/how_are_electrodes_magnetometers_or_gradiometers_described
 
+- name:  Combined EEG and MEG source reconstruction
+  link:  /example/combined_eeg_and_meg_source_reconstruction
+
 - name:  How can I convert an anatomical MRI from DICOM into CTF format?
   link:  /faq/how_can_i_convert_an_anatomical_mri_from_dicom_into_ctf_format
+
+- name:  Common filters in beamforming
+  link:  /example/common_filters_in_beamforming
 
 - name:  How can I merge two datasets that were acquired simultaneously with different amplifiers?
   link:  /faq/how_can_i_merge_two_datasets_that_were_acquired_simultaneously_with_different_amplifiers
 
+- name:  Compute forward simulated data and apply a beamformer scan
+  link:  /example/compute_forward_simulated_data_and_apply_a_beamformer_scan
+
 - name:  How can I monitor a subject's head position during a MEG session?
   link:  /faq/how_can_i_monitor_a_subject_s_head_position_during_a_meg_session
+
+- name:  Create MNI-aligned grids in individual head-space
+  link:  /example/create_single-subject_grids_in_individual_head_space_that_are_all_aligned_in_mni_space
 
 - name:  How is the segmentation defined?
   link:  /faq/how_is_the_segmentation_defined
 
+- name:  Fit a dipole to the tactile ERF after mechanical stimulation
+  link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
+
 - name:  How to coregister an anatomical MRI with the gradiometer or electrode positions?
   link:  /faq/how_to_coregister_an_anatomical_mri_with_the_gradiometer_or_electrode_positions
+
+- name:  Fixing a missing channel
+  link:  /example/fixing_a_missing_sensor
 
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
+- name:  Getting started with reading raw EEG or MEG data
+  link:  /example/getting_started_with_reading_raw_eeg_or_meg_data
+
 - name:  Getting started with BabySQUID data
   link:  /getting_started/babysquid
+
+- name:  How to incorporate head movements in MEG analysis
+  link:  /example/how_to_incorporate_head_movements_in_meg_analysis
 
 - name:  Getting started with BTi/4D data
   link:  /getting_started/bti
 
+- name:  Make leadfields using different headmodels
+  link:  /example/make_leadfields_using_different_headmodels
+
 - name:  Getting started with CTF data
   link:  /getting_started/ctf
+
+- name:  Interpolating data from the CTF151 to the CTF275 sensor array using megrealign
+  link:  /example/megrealign
 
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
 
+- name:  Source statistics
+  link:  /example/source_statistics
+
 - name:  Getting started with real-time head localization in MEG
   link:  /getting_started/realtime_headlocalizer
+
+- name:  Can I create an artificial CTF dataset using MATLAB?
+  link:  /example/writing_simulated_data_to_a_ctf_dataset
 
 - name:  Getting started with Yokogawa data
   link:  /getting_started/yokogawa
 
+- name:  Can I do combined EEG and MEG source reconstruction?
+  link:  /faq/can_i_do_combined_eeg_and_meg_source_reconstruction
+
 - name:  Importing your data
   link:  /reading_data
+
+- name:  How are electrodes, magnetometers or gradiometers described?
+  link:  /faq/how_are_electrodes_magnetometers_or_gradiometers_described
 
 - name:  References to implemented methods
   link:  /references_to_implemented_methods
 
+- name:  How can I convert an anatomical MRI from DICOM into CTF format?
+  link:  /faq/how_can_i_convert_an_anatomical_mri_from_dicom_into_ctf_format
+
 - name:  Introduction - dealing with artifacts
   link:  /tutorial/artifacts
+
+- name:  How can I merge two datasets that were acquired simultaneously with different amplifiers?
+  link:  /faq/how_can_i_merge_two_datasets_that_were_acquired_simultaneously_with_different_amplifiers
 
 - name:  Automatic artifact rejection
   link:  /tutorial/automatic_artifact_rejection
@@ -94,50 +106,95 @@
 - name:  Localizing oscillatory sources using beamformer techniques
   link:  /tutorial/beamformer
 
+- name:  How can I monitor a subject's head position during a MEG session?
+  link:  /faq/how_can_i_monitor_a_subject_s_head_position_during_a_meg_session
+
 - name:  Localizing visual gamma and cortico-muscular coherence using DICS
   link:  /tutorial/beamformingextended
+
+- name:  How is the segmentation defined?
+  link:  /faq/how_is_the_segmentation_defined
 
 - name:  Cluster-based permutation tests on time-frequency data
   link:  /tutorial/cluster_permutation_freq
 
+- name:  How to coregister an anatomical MRI with the gradiometer or electrode positions?
+  link:  /faq/how_to_coregister_an_anatomical_mri_with_the_gradiometer_or_electrode_positions
+
 - name:  Cluster-based permutation tests on event related fields
   link:  /tutorial/cluster_permutation_timelock
+
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
 - name:  Analysis of corticomuscular coherence
   link:  /tutorial/coherence
 
+- name:  Getting started with BabySQUID data
+  link:  /getting_started/babysquid
+
 - name:  Extended analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivityextended
 
+- name:  Getting started with BTi/4D data
 - name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /getting_started/bti
   link:  /tutorial/continuous
+
 
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
+- name:  Getting started with CTF data
+
+  link:  /getting_started/ctf
 
 - name:  Virtual channel analysis of epilepsy MEG data
   link:  /tutorial/epilepsy
 
+- name:  Getting started with Neuromag/Elekta/Megin data
+  link:  /getting_started/neuromag
+
 - name:  Event related averaging and MEG planar gradient
   link:  /tutorial/eventrelatedaveraging
+- name:  Getting started with real-time head localization in MEG
+
+  link:  /getting_started/realtime_headlocalizer
 
 - name:  Parametric and non-parametric statistics on event-related fields
   link:  /tutorial/eventrelatedstatistics
 
+- name:  Getting started with Yokogawa data
+  link:  /getting_started/yokogawa
+
 - name:  Fourier analysis of neuronal oscillations and synchronization
   link:  /tutorial/fourier
+
+- name:  Importing your data
+  link:  /reading_data
 
 - name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
 
+- name:  References to implemented methods
+  link:  /references_to_implemented_methods
+
 - name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_fem
+
+- name:  Introduction - dealing with artifacts
+  link:  /tutorial/artifacts
 
 - name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
   link:  /tutorial/headmodel_meg
 
+- name:  Automatic artifact rejection
+  link:  /tutorial/automatic_artifact_rejection
+
 - name:  Introduction to the FieldTrip toolbox
   link:  /tutorial/introduction
+
+- name:  Localizing oscillatory sources using beamformer techniques
+  link:  /tutorial/beamformer
 
 - name:  Specifying the channel layout for plotting
   link:  /tutorial/layout
@@ -145,35 +202,170 @@
 - name:  Details of the MEG language dataset
   link:  /tutorial/meg_language
 
+- name:  Localizing visual gamma and cortico-muscular coherence using DICS
+  link:  /tutorial/beamformingextended
+
 - name:  Source reconstruction of event-related fields using minimum-norm estimation
   link:  /tutorial/minimumnormestimate
+
+- name:  Cluster-based permutation tests on time-frequency data
+  link:  /tutorial/cluster_permutation_freq
 
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
+- name:  Cluster-based permutation tests on event related fields
+  link:  /tutorial/cluster_permutation_timelock
+
 - name:  Classification of event related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
+
+- name:  Analysis of corticomuscular coherence
+  link:  /tutorial/coherence
 
 - name:  Trigger-based trial selection
   link:  /tutorial/preprocessing
 
+- name:  Extended analysis of sensor- and source-level connectivity
+  link:  /tutorial/connectivityextended
+
 - name:  Sensor-level ERF, TFR and connectivity analyses
   link:  /tutorial/sensor_analysis
+
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
 
 - name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
 
+- name:  Speeding up your analysis with distributed computing
+  link:  /tutorial/distributedcomputing
+
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /tutorial/timefrequencyanalysis
+
+- name:  Virtual channel analysis of epilepsy MEG data
+  link:  /tutorial/epilepsy
 
 - name:  Visual artifact rejection
   link:  /tutorial/visual_artifact_rejection
 
+- name:  Event related averaging and MEG planar gradient
+  link:  /tutorial/eventrelatedaveraging
+
 - name:  FieldTrip Walkthrough
   link:  /walkthrough
 
+- name:  Parametric and non-parametric statistics on event-related fields
+  link:  /tutorial/eventrelatedstatistics
+
 - name:  Beamforming evoked fields and potentials in combined MEG/EEG data
   link:  /workshop/aarhus/beamformingerf
+
+- name:  Fourier analysis of neuronal oscillations and synchronization
+  link:  /tutorial/fourier
+
+- name:  FieldTrip workshop in Aarhus
+  link:  /workshop/aarhus2015
+
+- name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
+  link:  /tutorial/headmodel_eeg_bem
+
+- name:  MEG-UK 2015 meeting
+  link:  /workshop/meg-uk-2015
+
+- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+  link:  /tutorial/headmodel_eeg_fem
+
+- name:  Face recognition dataset
+  link:  /workshop/meg-uk-2015/dataset
+
+- name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
+  link:  /tutorial/headmodel_meg
+
+- name:  SPM DCM demo
+  link:  /workshop/meg-uk-2015/dcm_tutorial
+
+- name:  Introduction to the FieldTrip toolbox
+  link:  /tutorial/introduction
+
+- name:  FieldTrip beamformer demo
+  link:  /workshop/meg-uk-2015/fieldtrip-beamformer-demo
+
+- name:  Specifying the channel layout for plotting
+  link:  /tutorial/layout
+
+- name:  FieldTrip connectivity demo
+  link:  /workshop/meg-uk-2015/fieldtrip-connectivity-demo
+
+- name:  Details of the MEG language dataset
+  link:  /tutorial/meg_language
+
+- name:  FieldTrip stats demo
+  link:  /workshop/meg-uk-2015/fieldtrip-stats-demo
+
+- name:  Source reconstruction of event-related fields using minimum-norm estimation
+  link:  /tutorial/minimumnormestimate
+
+- name:  SPM Source reconstruction demo
+  link:  /workshop/meg-uk-2015/spm_source
+
+- name:  SPM Sensor-level stats demo
+- name:  Multivariate analysis of electrophysiological data
+  link:  /workshop/meg-uk-2015/spm_stats
+  link:  /tutorial/multivariateanalysis
+
+
+- name:  FieldTrip course at the NatMEG in Stockholm
+  link:  /workshop/natmeg
+
+- name:  Classification of event related MEG data using MVPA-Light
+  link:  /tutorial/mvpa_light
+
+- name:  Beamforming oscillatory responses in combined MEG/EEG data
+  link:  /workshop/natmeg/beamforming
+
+- name:  Trigger-based trial selection
+  link:  /tutorial/preprocessing
+
+- name:  Dipole fitting of combined MEG/EEG data
+  link:  /workshop/natmeg/dipolefitting
+
+- name:  Sensor-level ERF, TFR and connectivity analyses
+  link:  /tutorial/sensor_analysis
+
+- name:  Description of the auditory oddball MEG+EEG dataset
+  link:  /workshop/natmeg/meg_audodd
+
+- name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
+  link:  /tutorial/sourcemodel
+
+- name:  Preprocessing and event-related activity in combined MEG/EEG data
+  link:  /workshop/natmeg/preprocessing
+
+- name:  Time-frequency analysis using Hanning window, multitapers and wavelets
+  link:  /tutorial/timefrequencyanalysis
+
+- name:  Statistical analysis and multiple comparison correction for combined MEG/EEG data
+  link:  /workshop/natmeg/statistics
+
+- name:  Visual artifact rejection
+  link:  /tutorial/visual_artifact_rejection
+
+- name:  Time-frequency analysis of combined MEG/EEG data
+  link:  /workshop/natmeg/timefrequency
+
+- name:  FieldTrip Walkthrough
+  link:  /walkthrough
+
+- name:  Beamforming oscillatory responses in MEG data
+  link:  /workshop/oslo2019/beamforming
+
+- name:  Beamforming evoked fields and potentials in combined MEG/EEG data
+  link:  /workshop/aarhus/beamformingerf
+
+- name:  Reading in data and performing sensor-level ERF and TFR analyses
+  link:  /workshop/oxford2019/sensor_analysis_plusminus
 
 - name:  FieldTrip workshop in Aarhus
   link:  /workshop/aarhus2015
