--- a/_data/tag/plot.yml
+++ b/_data/tag/plot.yml
@@ -1,8 +1,17 @@
+- name:  Event related averaging and MEG planar gradient
+  link:  /tutorial/eventrelatedaveraging
+
 - name:  Plotting of channel-level, source-level and other geometrical data related to EEG/MEG
   link:  /development/module/plotting
 
+- name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
+  link:  /tutorial/headmodel_eeg_bem
+
 - name:  Check the quality of the anatomical coregistration
   link:  /example/coregistration_quality_control
+
+- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+  link:  /tutorial/headmodel_eeg_fem
 
 - name:  Plotting the result of source reconstructing on a cortical mesh
   link:  /example/plotting_the_result_of_source_reconstructing_on_a_cortical_mesh
@@ -10,23 +19,47 @@
 - name:  How can I define neighbouring sensors?
   link:  /faq/how_can_i_define_neighbouring_sensors
 
+- name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
+  link:  /tutorial/headmodel_meg
+
+- name:  Specifying the channel layout for plotting
+  link:  /tutorial/layout
+
 - name:  How can I use the databrowser?
   link:  /faq/how_can_i_use_the_databrowser
+
+- name:  Source reconstruction of event-related fields using minimum-norm estimation
+  link:  /tutorial/minimumnormestimate
 
 - name:  How do I construct a layout file for the plotting functions?
   link:  /faq/how_do_i_construct_a_layout_file_for_the_plotting_functions
 
+- name:  Sensor-level ERF, TFR and connectivity analyses
+  link:  /tutorial/sensor_analysis
+
 - name:  I am getting strange artifacts in figures that use opacity
   link:  /faq/i_am_getting_strange_artifacts_in_figures_that_use_opacity
+
+- name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
+  link:  /tutorial/sourcemodel
 
 - name:  I am having problems printing figures that use opacity
   link:  /faq/i_am_having_problems_printing_figures_that_use_opacity
 
+- name:  Time-frequency analysis using Hanning window, multitapers and wavelets
+  link:  /tutorial/timefrequencyanalysis
+
 - name:  The databrowser crashes and destroys the whole MATLAB session, how can I resolve this?
   link:  /faq/the_databrowser_crashes_and_destroys_the_whole_matlab_session_how_can_i_resolve_this
 
+- name:  Dealing with TMS-EEG datasets
+  link:  /tutorial/tms-eeg
+
 - name:  What is the format of the layout file which is used for plotting?
   link:  /faq/what_is_the_format_of_the_layout_file_which_is_used_for_plotting
+
+- name:  Reading in data and performing sensor-level ERF and TFR analyses
+  link:  /workshop/oxford2019/sensor_analysis_plusminus
 
 - name:  Reference documentation
   link:  /reference
