--- a/_data/tag/preprocessing.yml
+++ b/_data/tag/preprocessing.yml
@@ -1,68 +1,23 @@
-- name:  Detect the muscle activity in an EMG channel and use that as trial definition
-  link:  /example/detect_the_muscle_activity_in_an_emg_channel_and_use_that_as_trial_definition
-
-- name:  Determine the filter characteristics
-  link:  /example/determine_the_filter_characteristics
-
-- name:  Fixing a missing channel
-  link:  /example/fixing_a_missing_sensor
-
-- name:  Getting started with reading raw EEG or MEG data
-  link:  /example/getting_started_with_reading_raw_eeg_or_meg_data
-
-- name:  Making your own trialfun for conditional trial definition
-  link:  /example/making_your_own_trialfun_for_conditional_trial_definition
-
-- name:  Use independent component analysis (ICA) to remove ECG artifacts
-  link:  /example/use_independent_component_analysis_ica_to_remove_ecg_artifacts
-
-- name:  Use independent component analysis (ICA) to remove EOG artifacts
-  link:  /example/use_independent_component_analysis_ica_to_remove_eog_artifacts
-
-- name:  What dataformats are supported?
-  link:  /faq/dataformat
-
-- name:  How can I deal with a discontinuous Neuralynx recording
-  link:  /faq/discontinuous_neuralynx
-
-- name:  How can I extend the reading functions with a new dataformat?
-  link:  /faq/how_can_extend_the_reading_functions_with_a_new_dataformat
-
-- name:  How can I consistently represent artifacts in my data?
-  link:  /faq/how_can_i_consistently_represent_artifacts_in_my_data
-
-- name:  How can I convert one dataformat into an other?
-  link:  /faq/how_can_i_convert_one_dataformat_into_an_other
-
-- name:  How can I find out what eventvalues and eventtypes there are in my data?
-  link:  /faq/how_can_i_find_out_what_eventvalues_and_eventtypes_there_are_in_my_data
-
-- name:  How can I import my own data format?
-  link:  /faq/how_can_i_import_my_own_dataformat
-
-- name:  How can I interpret the different types of padding in FieldTrip?
-  link:  /faq/how_can_i_interpret_the_different_types_of_padding_that_i_find_when_dealing_with_artifacts
-
-- name:  How can I merge two datasets that were acquired simultaneously with different amplifiers?
-  link:  /faq/how_can_i_merge_two_datasets_that_were_acquired_simultaneously_with_different_amplifiers
-
-- name:  How can I preprocess a dataset that is too large to fit into memory?
-  link:  /faq/how_can_i_preprocess_a_dataset_that_is_too_large_to_fit_into_memory
-
-- name:  How can I process continuous data without triggers?
-  link:  /faq/how_can_i_process_continuous_data_without_triggers
-
 - name:  How can I read all channels from an EDF file that contains multiple sampling rates?
   link:  /faq/how_can_i_read_all_channels_from_an_edf_file_that_contains_multiple_sampling_rates
 
 - name:  How can I read corrupted (unsaved) CTF data?
   link:  /faq/how_can_i_read_corrupted_unsaved_ctf_data
 
+- name:  Detect the muscle activity in an EMG channel and use that as trial definition
+  link:  /example/detect_the_muscle_activity_in_an_emg_channel_and_use_that_as_trial_definition
+
 - name:  How does the filter padding in preprocessing work?
   link:  /faq/how_does_the_filter_padding_in_preprocessing_work
 
+- name:  Determine the filter characteristics
+  link:  /example/determine_the_filter_characteristics
+
 - name:  I have problems reading in neuroscan .cnt files. How can I fix this?
   link:  /faq/i_have_problems_reading_in_neuroscan_.cnt_files._how_can_i_fix_this
+
+- name:  Fixing a missing channel
+  link:  /example/fixing_a_missing_sensor
 
 - name:  Reading is slow, can I write my raw data to a more efficient file format?
   link:  /faq/reading_is_slow_can_i_write_my_raw_data_to_a_more_efficient_file_format
@@ -70,8 +25,128 @@
 - name:  How can I check or decipher the sequence of triggers in my data?
   link:  /faq/triggers
 
+- name:  Getting started with reading raw EEG or MEG data
+  link:  /example/getting_started_with_reading_raw_eeg_or_meg_data
+
 - name:  What is the relation between "events" (such as triggers) and "trials"?
   link:  /faq/what_is_the_relation_between_events_such_as_triggers_and_trials
+
+- name:  Making your own trialfun for conditional trial definition
+  link:  /example/making_your_own_trialfun_for_conditional_trial_definition
+
+- name:  Use independent component analysis (ICA) to remove ECG artifacts
+  link:  /example/use_independent_component_analysis_ica_to_remove_ecg_artifacts
+
+- name:  What kind of filters can I apply to my data?
+  link:  /faq/what_kind_of_filters_can_i_apply_to_my_data
+
+- name:  Use independent component analysis (ICA) to remove EOG artifacts
+  link:  /example/use_independent_component_analysis_ica_to_remove_eog_artifacts
+
+- name:  Why am I not getting integer frequencies?
+  link:  /faq/why_am_i_not_getting_exact_integer_frequencies
+
+- name:  What dataformats are supported?
+  link:  /faq/dataformat
+
+- name:  Why does my TFR look strange (part I, demeaning)?
+  link:  /faq/why_does_my_tfr_look_strange
+
+- name:  How can I deal with a discontinuous Neuralynx recording
+  link:  /faq/discontinuous_neuralynx
+
+- name:  Why does my TFR look strange (part II, detrending)?
+  link:  /faq/why_does_my_tfr_look_strange_part_ii
+
+- name:  How can I extend the reading functions with a new dataformat?
+  link:  /faq/how_can_extend_the_reading_functions_with_a_new_dataformat
+
+- name:  Why is there a residual 50Hz line-noise component after applying a DFT filter?
+  link:  /faq/why_is_there_a_residual_50hz_line-noise_component_after_applying_a_dft_filter
+
+- name:  How can I consistently represent artifacts in my data?
+  link:  /faq/how_can_i_consistently_represent_artifacts_in_my_data
+
+- name:  Introduction - dealing with artifacts
+  link:  /tutorial/artifacts
+
+- name:  How can I convert one dataformat into an other?
+  link:  /faq/how_can_i_convert_one_dataformat_into_an_other
+
+- name:  Automatic artifact rejection
+  link:  /tutorial/automatic_artifact_rejection
+
+- name:  How can I find out what eventvalues and eventtypes there are in my data?
+  link:  /faq/how_can_i_find_out_what_eventvalues_and_eventtypes_there_are_in_my_data
+
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
+
+- name:  How can I import my own data format?
+  link:  /faq/how_can_i_import_my_own_dataformat
+
+- name:  Event related averaging and MEG planar gradient
+  link:  /tutorial/eventrelatedaveraging
+
+- name:  How can I interpret the different types of padding in FieldTrip?
+  link:  /faq/how_can_i_interpret_the_different_types_of_padding_that_i_find_when_dealing_with_artifacts
+
+- name:  Preprocessing and averaging of multi-channel NIRS data
+  link:  /tutorial/nirs_multichannel
+
+- name:  How can I merge two datasets that were acquired simultaneously with different amplifiers?
+  link:  /faq/how_can_i_merge_two_datasets_that_were_acquired_simultaneously_with_different_amplifiers
+
+- name:  How can I preprocess a dataset that is too large to fit into memory?
+  link:  /faq/how_can_i_preprocess_a_dataset_that_is_too_large_to_fit_into_memory
+
+- name:  Preprocessing and averaging of single-channel NIRS data
+  link:  /tutorial/nirs_singlechannel
+
+- name:  How can I process continuous data without triggers?
+  link:  /faq/how_can_i_process_continuous_data_without_triggers
+
+- name:  How can I read all channels from an EDF file that contains multiple sampling rates?
+  link:  /faq/how_can_i_read_all_channels_from_an_edf_file_that_contains_multiple_sampling_rates
+
+- name:  Trigger-based trial selection
+  link:  /tutorial/preprocessing
+
+- name:  Preprocessing of EEG data and computing ERPs
+- name:  How can I read corrupted (unsaved) CTF data?
+  link:  /tutorial/preprocessing_erp
+  link:  /faq/how_can_i_read_corrupted_unsaved_ctf_data
+
+
+- name:  Sensor-level ERF, TFR and connectivity analyses
+  link:  /tutorial/sensor_analysis
+
+- name:  How does the filter padding in preprocessing work?
+  link:  /faq/how_does_the_filter_padding_in_preprocessing_work
+
+- name:  Visual artifact rejection
+  link:  /tutorial/visual_artifact_rejection
+
+- name:  I have problems reading in neuroscan .cnt files. How can I fix this?
+  link:  /faq/i_have_problems_reading_in_neuroscan_.cnt_files._how_can_i_fix_this
+
+- name:  Preprocessing and event-related activity in combined MEG/EEG data
+  link:  /workshop/natmeg/preprocessing
+
+- name:  Reading is slow, can I write my raw data to a more efficient file format?
+  link:  /faq/reading_is_slow_can_i_write_my_raw_data_to_a_more_efficient_file_format
+
+- name:  Preprocessing and event-related potentials in EEG data
+  link:  /workshop/oslo2019/introduction
+
+- name:  How can I check or decipher the sequence of triggers in my data?
+  link:  /faq/triggers
+
+- name:  What is the relation between "events" (such as triggers) and "trials"?
+  link:  /faq/what_is_the_relation_between_events_such_as_triggers_and_trials
+
+- name:  Reading in data and performing sensor-level ERF and TFR analyses
+  link:  /workshop/oxford2019/sensor_analysis_plusminus
 
 - name:  What kind of filters can I apply to my data?
   link:  /faq/what_kind_of_filters_can_i_apply_to_my_data
