--- a/_data/tag/realtime.yml
+++ b/_data/tag/realtime.yml
@@ -1,62 +1,125 @@
-- name:  Real-time access to neurophysiological data
-  link:  /development/realtime
-
-- name:  Streaming realtime EEG data to and from Arduino
-  link:  /development/realtime/arduino
-
-- name:  Artinis Medical Systems
-  link:  /development/realtime/artinis
-
-- name:  Soundcard input using PortAudio
-  link:  /development/realtime/audio2ft
-
-- name:  BCI2000
-  link:  /development/realtime/bci2000
-
-- name:  Biosemi ActiveTwo EEG amplifier
-  link:  /development/realtime/biosemi
-
-- name:  BrainStream
-  link:  /development/realtime/brainstream
-
-- name:  Overview of the realtime buffer
-  link:  /development/realtime/buffer
-
-- name:  FieldTrip buffer C implementation
-  link:  /development/realtime/buffer_c
-
-- name:  FieldTrip buffer C++ implementation
-  link:  /development/realtime/buffer_cpp
-
-- name:  FieldTrip buffer Java interface
-  link:  /development/realtime/buffer_java
-
-- name:  FieldTrip buffer MATLAB interface
-  link:  /development/realtime/buffer_matlab
-
 - name:  Overview of the realtime buffer
   link:  /development/realtime/buffer_overview
+
+- name:  Real-time access to neurophysiological data
+  link:  /development/realtime
 
 - name:  Low-level FieldTrip buffer TCP network protocol
   link:  /development/realtime/buffer_protocol
 
+- name:  Streaming realtime EEG data to and from Arduino
+  link:  /development/realtime/arduino
+
 - name:  FieldTrip buffer Python interface
   link:  /development/realtime/buffer_python
+
+- name:  Artinis Medical Systems
+  link:  /development/realtime/artinis
 
 - name:  Closing the loop in a real-time BCI application
   link:  /development/realtime/closing_the_loop
 
+- name:  Soundcard input using PortAudio
+  link:  /development/realtime/audio2ft
+
 - name:  CTF
   link:  /development/realtime/ctf
+
+- name:  BCI2000
+  link:  /development/realtime/bci2000
 
 - name:  Suggested improvements for compatibility across versions
   link:  /development/realtime/draft_compatability
 
+- name:  Biosemi ActiveTwo EEG amplifier
+  link:  /development/realtime/biosemi
+
 - name:  Suggested improvements for handling header and chunks
   link:  /development/realtime/draft_header_chunks
 
+- name:  BrainStream
+  link:  /development/realtime/brainstream
+
 - name:  Suggested changes to the reference implementation
   link:  /development/realtime/draft_implementation
+
+- name:  Overview of the realtime buffer
+  link:  /development/realtime/buffer
+
+- name:  Suggested changes to the network protocol
+  link:  /development/realtime/draft_network
+
+- name:  FieldTrip buffer C implementation
+  link:  /development/realtime/buffer_c
+
+- name:  Emotiv neuroheadset
+  link:  /development/realtime/emotiv
+
+- name:  FieldTrip buffer C++ implementation
+  link:  /development/realtime/buffer_cpp
+
+- name:  Realtime fMRI from Siemens scanners
+  link:  /development/realtime/fmri
+
+- name:  FieldTrip buffer Java interface
+  link:  /development/realtime/buffer_java
+
+- name:  Specific software implementations for realtime EEG/MEG/fMRI/NIRS
+  link:  /development/realtime/implementation
+
+- name:  FieldTrip buffer MATLAB interface
+  link:  /development/realtime/buffer_matlab
+
+- name:  Jinga-Hi
+  link:  /development/realtime/jinga-hi
+
+- name:  Overview of the realtime buffer
+  link:  /development/realtime/buffer_overview
+
+- name:  Micromed
+  link:  /development/realtime/micromed
+
+- name:  Low-level FieldTrip buffer TCP network protocol
+  link:  /development/realtime/buffer_protocol
+
+- name:  Modular EEG, OpenEEG
+  link:  /development/realtime/modulareeg
+
+- name:  FieldTrip buffer Python interface
+  link:  /development/realtime/buffer_python
+
+- name:  Neuralynx
+  link:  /development/realtime/neuralynx
+
+- name:  Closing the loop in a real-time BCI application
+  link:  /development/realtime/closing_the_loop
+
+- name:  Elekta / Neuromag
+  link:  /development/realtime/neuromag
+
+- name:  CTF
+  link:  /development/realtime/ctf
+
+- name:  ANT NeuroSDK
+  link:  /development/realtime/neurosdk
+
+- name:  Suggested improvements for compatibility across versions
+  link:  /development/realtime/draft_compatability
+
+- name:  Neurosky ThinkCap
+  link:  /development/realtime/neurosky
+
+- name:  Suggested improvements for handling header and chunks
+  link:  /development/realtime/draft_header_chunks
+
+- name:  OpenBCI
+  link:  /development/realtime/openbci
+
+- name:  Suggested changes to the reference implementation
+  link:  /development/realtime/draft_implementation
+
+- name:  BrainVision Recorder Remote Data Access (RDA)
+  link:  /development/realtime/rda
 
 - name:  Suggested changes to the network protocol
   link:  /development/realtime/draft_network
@@ -64,55 +127,112 @@
 - name:  Emotiv neuroheadset
   link:  /development/realtime/emotiv
 
-- name:  Realtime fMRI from Siemens scanners
-  link:  /development/realtime/fmri
-
-- name:  Specific software implementations for realtime EEG/MEG/fMRI/NIRS
-  link:  /development/realtime/implementation
-
-- name:  Jinga-Hi
-  link:  /development/realtime/jinga-hi
-
-- name:  Micromed
-  link:  /development/realtime/micromed
-
-- name:  Modular EEG, OpenEEG
-  link:  /development/realtime/modulareeg
-
-- name:  Neuralynx
-  link:  /development/realtime/neuralynx
-
-- name:  Elekta / Neuromag
-  link:  /development/realtime/neuromag
-
-- name:  ANT NeuroSDK
-  link:  /development/realtime/neurosdk
-
-- name:  Neurosky ThinkCap
-  link:  /development/realtime/neurosky
-
-- name:  OpenBCI
-  link:  /development/realtime/openbci
-
-- name:  BrainVision Recorder Remote Data Access (RDA)
-  link:  /development/realtime/rda
-
 - name:  FieldTrip buffer reference implementation
   link:  /development/realtime/reference_implementation
 
 - name:  Scratchpad for the realtime buffer interface
   link:  /development/realtime/scratchpad
 
+- name:  Realtime fMRI from Siemens scanners
+  link:  /development/realtime/fmri
+
 - name:  TMSI EEG amplifiers
   link:  /development/realtime/tmsi
+
+- name:  Specific software implementations for realtime EEG/MEG/fMRI/NIRS
+  link:  /development/realtime/implementation
 
 - name:  TOBI - Tools for Brain-Computer Interaction
   link:  /development/realtime/tobi
 
+- name:  Jinga-Hi
+  link:  /development/realtime/jinga-hi
+
 - name:  Example real-time average
   link:  /example/ft_realtime_average
 
+- name:  Micromed
+  link:  /development/realtime/micromed
+
 - name:  Example real-time classification
+  link:  /example/ft_realtime_classification
+
+- name:  Modular EEG, OpenEEG
+  link:  /development/realtime/modulareeg
+
+- name:  Realtime neurofeedback application based on Hilbert phase estimation
+  link:  /example/ft_realtime_hilbert
+
+- name:  Neuralynx
+  link:  /development/realtime/neuralynx
+
+- name:  Example real-time power estimate
+  link:  /example/ft_realtime_powerestimate
+
+- name:  Elekta / Neuromag
+  link:  /development/realtime/neuromag
+
+- name:  Example real-time selective average
+  link:  /example/ft_realtime_selectiveaverage
+
+- name:  ANT NeuroSDK
+  link:  /development/realtime/neurosdk
+
+- name:  Example real-time signal viewer
+  link:  /example/ft_realtime_signalviewer
+
+- name:  Measuring the timing delay and jitter for a real-time application
+  link:  /example/measuring_the_timing_delay_and_jitter_for_a_real-time_application
+
+- name:  Neurosky ThinkCap
+  link:  /development/realtime/neurosky
+
+- name:  Does the FieldTrip realtime buffer only work with MATLAB?
+  link:  /faq/does_the_fieldtrip_realtime_buffer_only_work_with_matlab
+
+- name:  OpenBCI
+  link:  /development/realtime/openbci
+
+- name:  How can I monitor a subject's head position during a MEG session?
+  link:  /faq/how_can_i_monitor_a_subject_s_head_position_during_a_meg_session
+
+- name:  BrainVision Recorder Remote Data Access (RDA)
+  link:  /development/realtime/rda
+
+- name:  What kind of cable do I need for a serial port connection between two computers?
+  link:  /faq/how_can_i_test_the_serial_port_connection_between_two_computers
+
+- name:  FieldTrip buffer reference implementation
+  link:  /development/realtime/reference_implementation
+
+- name:  Scratchpad for the realtime buffer interface
+  link:  /development/realtime/scratchpad
+- name:  How fast is the FieldTrip buffer for realtime data streaming?
+
+  link:  /faq/how_fast_is_the_fieldtrip_buffer_for_realtime_data_streaming
+
+- name:  TMSI EEG amplifiers
+  link:  /development/realtime/tmsi
+
+- name:  How should I get started with the FieldTrip realtime buffer?
+  link:  /faq/how_should_i_get_started_with_the_fieldtrip_realtime_buffer
+
+- name:  Getting started with real-time analysis for BCI/neurofeedback
+- name:  TOBI - Tools for Brain-Computer Interaction
+  link:  /getting_started/realtime
+  link:  /development/realtime/tobi
+
+
+- name:  Getting started with real-time head localization in MEG
+  link:  /getting_started/realtime_headlocalizer
+- name:  Example real-time average
+
+  link:  /example/ft_realtime_average
+
+- name:  Realtime MEG BCI hands-on session in Nijmegen
+  link:  /workshop/realtime
+- name:  Example real-time classification
+
   link:  /example/ft_realtime_classification
 
 - name:  Realtime neurofeedback application based on Hilbert phase estimation
