--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -1,44 +1,32 @@
-- name:  Which datasets are used in the documentation and where are they used?
-  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
-
-- name:  Getting started with real-time analysis for BCI/neurofeedback
-  link:  /getting_started/realtime
-
-- name:  Overview of all tutorials
-  link:  /tutorial
-
-- name:  Introduction - dealing with artifacts
-  link:  /tutorial/artifacts
-
-- name:  Automatic artifact rejection
-  link:  /tutorial/automatic_artifact_rejection
-
-- name:  Localizing oscillatory sources using beamformer techniques
-  link:  /tutorial/beamformer
-
-- name:  Localizing visual gamma and cortico-muscular coherence using DICS
-  link:  /tutorial/beamformingextended
-
-- name:  Cluster-based permutation tests on time-frequency data
-  link:  /tutorial/cluster_permutation_freq
-
-- name:  Cluster-based permutation tests on event related fields
-  link:  /tutorial/cluster_permutation_timelock
-
 - name:  Analysis of corticomuscular coherence
   link:  /tutorial/coherence
+
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
 - name:  Analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivity
 
+- name:  Getting started with real-time analysis for BCI/neurofeedback
+  link:  /getting_started/realtime
+
 - name:  Extended analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivityextended
+
+- name:  Overview of all tutorials
+  link:  /tutorial
 
 - name:  Preprocessing - Reading continuous EEG and MEG data
   link:  /tutorial/continuous
 
+- name:  Introduction - dealing with artifacts
+  link:  /tutorial/artifacts
+
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
+
+- name:  Automatic artifact rejection
+  link:  /tutorial/automatic_artifact_rejection
 
 - name:  Localizing electrodes using a 3D-scanner
   link:  /tutorial/electrode
@@ -46,65 +34,134 @@
 - name:  Virtual channel analysis of epilepsy MEG data
   link:  /tutorial/epilepsy
 
+- name:  Localizing oscillatory sources using beamformer techniques
+  link:  /tutorial/beamformer
+
 - name:  Event related averaging and MEG planar gradient
   link:  /tutorial/eventrelatedaveraging
 
+- name:  Localizing visual gamma and cortico-muscular coherence using DICS
+  link:  /tutorial/beamformingextended
+
 - name:  Parametric and non-parametric statistics on event-related fields
   link:  /tutorial/eventrelatedstatistics
+
+- name:  Cluster-based permutation tests on time-frequency data
+  link:  /tutorial/cluster_permutation_freq
+
+- name:  Cluster-based permutation tests on event related fields
+  link:  /tutorial/cluster_permutation_timelock
 
 - name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
   link:  /tutorial/headmodel_eeg_bem
 
 - name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+- name:  Analysis of corticomuscular coherence
   link:  /tutorial/headmodel_eeg_fem
+
+  link:  /tutorial/coherence
 
 - name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
   link:  /tutorial/headmodel_meg
 
+- name:  Analysis of sensor- and source-level connectivity
+  link:  /tutorial/connectivity
+
 - name:  Analysis of human ECoG and sEEG recordings
   link:  /tutorial/human_ecog
 
+- name:  Extended analysis of sensor- and source-level connectivity
+  link:  /tutorial/connectivityextended
+
 - name:  Introduction to the FieldTrip toolbox
   link:  /tutorial/introduction
+- name:  Preprocessing - Reading continuous EEG and MEG data
 
+  link:  /tutorial/continuous
+
+- name:  Speeding up your analysis with distributed computing
 - name:  Specifying the channel layout for plotting
+  link:  /tutorial/distributedcomputing
+
   link:  /tutorial/layout
 
 - name:  Making a memory efficient analysis script
   link:  /tutorial/memory
 
+- name:  Localizing electrodes using a 3D-scanner
+  link:  /tutorial/electrode
+
 - name:  Source reconstruction of event-related fields using minimum-norm estimation
   link:  /tutorial/minimumnormestimate
+
+- name:  Virtual channel analysis of epilepsy MEG data
+  link:  /tutorial/epilepsy
+
+- name:  Event related averaging and MEG planar gradient
+  link:  /tutorial/eventrelatedaveraging
 
 - name:  Analysis of monkey ECoG recordings
   link:  /tutorial/monkey_ecog
 
+- name:  Parametric and non-parametric statistics on event-related fields
+  link:  /tutorial/eventrelatedstatistics
+
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
+
+- name:  Creating a BEM volume conduction model of the head for source-reconstruction of EEG data
+  link:  /tutorial/headmodel_eeg_bem
 
 - name:  Classification of event related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
+- name:  Creating a FEM volume conduction model of the head for source-reconstruction of EEG data
+  link:  /tutorial/headmodel_eeg_fem
+
 - name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis
+
+- name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
+  link:  /tutorial/headmodel_meg
 
 - name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis_old
 
+- name:  Analysis of human ECoG and sEEG recordings
+  link:  /tutorial/human_ecog
+
 - name:  Preprocessing and averaging of multi-channel NIRS data
   link:  /tutorial/nirs_multichannel
+
+- name:  Introduction to the FieldTrip toolbox
+  link:  /tutorial/introduction
 
 - name:  Preprocessing and averaging of single-channel NIRS data
   link:  /tutorial/nirs_singlechannel
 
+- name:  Specifying the channel layout for plotting
+  link:  /tutorial/layout
+
 - name:  Trigger-based trial selection
   link:  /tutorial/preprocessing
+
+- name:  Making a memory efficient analysis script
+  link:  /tutorial/memory
 
 - name:  Preprocessing of EEG data and computing ERPs
   link:  /tutorial/preprocessing_erp
 
+- name:  Source reconstruction of event-related fields using minimum-norm estimation
+  link:  /tutorial/minimumnormestimate
+
 - name:  Creating a clean analysis script
+- name:  Analysis of monkey ECoG recordings
   link:  /tutorial/scripting
+
+  link:  /tutorial/monkey_ecog
+
+- name:  Multivariate analysis of electrophysiological data
+  link:  /tutorial/multivariateanalysis
 
 - name:  Sensor-level ERF, TFR and connectivity analyses
   link:  /tutorial/sensor_analysis
@@ -112,14 +169,83 @@
 - name:  Extracting the brain state and events from continuous sleep EEG
   link:  /tutorial/sleep
 
+- name:  Classification of event related MEG data using MVPA-Light
+  link:  /tutorial/mvpa_light
+
 - name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
+
+- name:  Whole brain connectivity and network analysis
+  link:  /tutorial/networkanalysis
 
 - name:  Preprocessing and analysis of spike and local field potential data
   link:  /tutorial/spikefield
 
+- name:  Whole brain connectivity and network analysis
+  link:  /tutorial/networkanalysis_old
+
+- name:  Preprocessing and averaging of multi-channel NIRS data
+  link:  /tutorial/nirs_multichannel
+
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /tutorial/timefrequencyanalysis
+
+- name:  Preprocessing and averaging of single-channel NIRS data
+- name:  Dealing with TMS-EEG datasets
+  link:  /tutorial/nirs_singlechannel
+  link:  /tutorial/tms-eeg
+
+
+- name:  Trigger-based trial selection
+  link:  /tutorial/preprocessing
+
+- name:  Visual artifact rejection
+  link:  /tutorial/visual_artifact_rejection
+
+- name:  Preprocessing of EEG data and computing ERPs
+  link:  /tutorial/preprocessing_erp
+
+- name:  Beamforming evoked fields and potentials in combined MEG/EEG data
+  link:  /workshop/aarhus/beamformingerf
+
+- name:  Creating a clean analysis script
+  link:  /tutorial/scripting
+
+- name:  Simulating and estimating, what about model (mis)match?
+  link:  /workshop/chieti/simulation
+
+- name:  Sensor-level ERF, TFR and connectivity analyses
+  link:  /tutorial/sensor_analysis
+
+- name:  Beamforming oscillatory responses in combined MEG/EEG data
+  link:  /workshop/natmeg/beamforming
+
+- name:  Extracting the brain state and events from continuous sleep EEG
+  link:  /tutorial/sleep
+
+- name:  Dipole fitting of combined MEG/EEG data
+  link:  /workshop/natmeg/dipolefitting
+
+- name:  Preprocessing and event-related activity in combined MEG/EEG data
+  link:  /workshop/natmeg/preprocessing
+
+- name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
+  link:  /tutorial/sourcemodel
+
+- name:  Statistical analysis and multiple comparison correction for combined MEG/EEG data
+  link:  /workshop/natmeg/statistics
+
+- name:  Preprocessing and analysis of spike and local field potential data
+  link:  /tutorial/spikefield
+
+- name:  Time-frequency analysis of combined MEG/EEG data
+  link:  /workshop/natmeg/timefrequency
+
+- name:  Time-frequency analysis using Hanning window, multitapers and wavelets
+  link:  /tutorial/timefrequencyanalysis
+
+- name:  Reading in data and performing sensor-level ERF and TFR analyses
+  link:  /workshop/oxford2019/sensor_analysis_plusminus
 
 - name:  Dealing with TMS-EEG datasets
   link:  /tutorial/tms-eeg
