--- a/_data/tag/development.yml
+++ b/_data/tag/development.yml
@@ -1,7 +1,7 @@
 - name:  Bugzilla and GitHub issue tracking
   link:  /bugzilla
 
-- name:  Contribute
+- name:  Contribute or request support
   link:  /contribute
 
 - name:  Development
