--- a/_data/tag/audio.yml
+++ b/_data/tag/audio.yml
@@ -1,6 +1,9 @@
 - name:  Soundcard input using PortAudio
   link:  /development/realtime/audio2ft
 
+- name:  Converting an example audio dataset for sharing in BIDS
+  link:  /example/bids_audio
+
 - name:  How can I play back EEG/MEG and synchronous audio or video?
   link:  /faq/audiovideo
 
