--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -10,6 +10,9 @@
 - name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
   link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
 
+- name:  Converting an example audio dataset for sharing in BIDS
+  link:  /example/bids_audio
+
 - name:  Converting an example behavioral dataset for sharing in BIDS
   link:  /example/bids_behavioral
 
