--- a/_data/tag/preprocessing.yml
+++ b/_data/tag/preprocessing.yml
@@ -22,7 +22,7 @@
 - name:  What dataformats are supported?
   link:  /faq/dataformat
 
-- name:  How can I deal with a discontinuous Neuralynx recording
+- name:  How can I deal with a discontinuous Neuralynx recording?
   link:  /faq/discontinuous_neuralynx
 
 - name:  How can I extend the reading functions with a new dataformat?
