--- a/_data/tag/sharing.yml
+++ b/_data/tag/sharing.yml
@@ -1,6 +1,9 @@
 - name:  BIDS - the brain imaging data structure
   link:  /example/bids
 
+- name:  Converting an example audio dataset for sharing in BIDS
+  link:  /example/bids_audio
+
 - name:  Converting an example behavioral dataset for sharing in BIDS
   link:  /example/bids_behavioral
 
